--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
+    font-size: 1.2rem;
 }
 
 .experience__container > div {
