--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ section {
 }
 
 section > h2,
+section > h3,
 section > h5 {
   color: var(--color-light);
   text-align: center;
@@ -108,6 +109,12 @@ a:hover {
 .btn-primary {
   background-color: var(--color-primary);
   color: var(--color-bg);
+}
+
+.btn-secundary{
+  position: absolute;
+  right: 10%;
+  background-color: transparent;
 }
 
 img {
