--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -20,11 +20,12 @@
 .portfolio__item-image {
     border-radius: 1.5rem;
     overflow: hidden;
+    min-height: 200px;
     height: 40%;
 }
 
 .portfolio__item h3 {
-    margin: 2rem 0;
+    margin: 1.5rem 0;
 }
 
 .portfolio__item p {
