--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -15,9 +15,11 @@ footer a {
     font-weight: 500;
     margin-bottom: 2rem;
     display: inline-block;
+    color: var(--color-white);
 }
 
 .permalinks {
+    font-size: 1.5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -29,7 +31,7 @@ footer a {
     display: flex;
     justify-content: center;
     gap: 1rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 
 .footer__socials a {
@@ -50,6 +52,7 @@ footer a {
 .footer__copyright {
     margin-bottom: 4rem;
     color: var(--color-bg);
+    font-size: 1.5rem;
 }
   
 @media screen and (max-width: 600px){
