--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,11 +1,11 @@
 .about__container {
     display: grid;
     grid-template-columns: 25% 65%;
-    gap: 10%;
+    gap: 5%;
 }
 
 .about__me {
-    padding-top: 100px;
+    margin-left: 15%;
     width: 100%;
     aspect-ratio: 1/1;
     border-radius: 2rem;
@@ -14,6 +14,8 @@
 }
 
 .about__me-image {
+    margin-top: 35%;
+    width: 70%;
     border-radius: 2rem;
     overflow: hidden;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
